--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -25,7 +25,8 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
 
         li(ng-show='isLoggedIn()')
           p.navbar-text 
-            img(src='{{getCurrentUser.twitter.profile_image_url}}' alt='Profile Image').profile_image 
+            img(src='{{getCurrentUser.twitter.profile_image_url}}' alt='Profile Image' ng-show="{{isTwitter}}").profile_image
+            {{getCurrentUser.name}}
             
         li(ng-show='isLoggedIn()', ng-class='{active: isActive("/logout")}')
           a(href='', ng-click='logout()') Logout
