--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -43,5 +43,6 @@
 @import 'admin/admin.styl';
 @import 'main/loggedIn/loggedIn.styl';
 @import 'main/main.styl';
+@import 'main/newPoll/newPoll.styl';
 @import 'modal/modal.styl';
 // endinjector
