form is function and new polls can be created

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -44,5 +44,6 @@
 @import 'main/loggedIn/loggedIn.styl';
 @import 'main/main.styl';
 @import 'main/newPoll/newPoll.styl';
+@import 'main/newPollPosted/newPollPosted.styl';
 @import 'modal/modal.styl';
 // endinjector
