Completed the vote page

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -45,5 +45,6 @@
 @import 'main/main.styl';
 @import 'main/newPoll/newPoll.styl';
 @import 'main/newPollPosted/newPollPosted.styl';
+@import 'user/user.styl';
 @import 'modal/modal.styl';
 // endinjector
