--- a/client/app/main/newPollPosted/newPollPosted.jade
+++ b/client/app/main/newPollPosted/newPollPosted.jade
@@ -1,1 +1,5 @@
-div this is the newPollPosted directive
+.container#newPollForm
+
+  h2 Congratulations! 
+  p You can view your poll at 
+    a(href="{{posted_url}}") {{posted_url}}
