pulled in the direct url to the same controller to make things easier and finished up some styling

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -43,8 +43,10 @@
 @import 'admin/admin.styl';
 @import 'main/loggedIn/loggedIn.styl';
 @import 'main/main.styl';
+@import 'main/myPolls/myPolls.styl';
 @import 'main/newPoll/newPoll.styl';
 @import 'main/newPollPosted/newPollPosted.styl';
-@import 'user/user.styl';
+@import 'main/signUp/signUp.styl';
+@import 'main/votePoll/votePoll.styl';
 @import 'modal/modal.styl';
 // endinjector
