--- a/client/app/main/loggedIn/loggedIn.jade
+++ b/client/app/main/loggedIn/loggedIn.jade
@@ -3,4 +3,5 @@ header#banner.hero-unit
     h1 Dashboard
     p.lead What would you like to do today?
     
-    button#currentPolls.btn.btn-primary.btn-lg Current Polls
+    button(ng-click="setPage('newPoll')").btn.btn-success.btn-lg New Poll
+    button(ng-click="setPage('myPolls')")#currentPolls.btn.btn-primary.btn-lg My Polls
