--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -30,8 +30,8 @@
   margin-top 50px
   i
     font-size 5em
-  .fa-heartbeat
-    color #d9534f
+  .fa-bolt
+    color #faea73
   .fa-globe
     color #5cb85c
   .fa-facebook
