--- a/client/app/main/newPollPosted/newPollPosted.jade
+++ b/client/app/main/newPollPosted/newPollPosted.jade
@@ -1,5 +1,5 @@
 .container#newPollForm
 
-  h2 Congratulations! 
-  p You can view your poll at 
+  h1 Congratulations! 
+  p.lead Your poll has been posted to 
     a(href="{{posted_url}}") {{posted_url}}
