--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -1,21 +1,12 @@
 div(ng-include='"components/navbar/navbar.html"')
+
+header#banner.hero-unit
+  .container
+    h1 VotePlex
+    p.lead Create custom polls with live results.
+
 .container
   .row
-    .col-sm-12
-      h1 Login
-      p
-        | Accounts are reset on server restart from
-        code server/config/seed.js
-        | . Default account is
-        code test@test.com
-        | /
-        code test
-      p
-        | Admin account is
-        code admin@admin.com
-        | /
-        code admin
-
     .col-sm-12
       form.form(name='form', ng-submit='login(form)', novalidate='')
         .form-group
@@ -30,17 +21,9 @@ div(ng-include='"components/navbar/navbar.html"')
             | Please enter your email and password.
           p.help-block {{ errors.other }}
 
-        div
-          button.btn.btn-inverse.btn-lg.btn-login(type='submit')
-            | Login
-          = ' '
-          a.btn.btn-default.btn-lg.btn-register(href='/signup')
-            | Register
 
-        hr
+        button.btn.btn-success(type='submit') Login
 
-        div
-          a.btn.btn-twitter(href='', ng-click='loginOauth("twitter")')
-            i.fa.fa-twitter
-            |  Connect with Twitter
-  hr
+        a.btn.btn-twitter(href='', ng-click='loginOauth("twitter")')
+          i.fa.fa-twitter
+            | Connect with Twitter
