--- a/client/app/account/login/login.styl
+++ b/client/app/account/login/login.styl
@@ -10,3 +10,14 @@
     color: #fff;
     background-color: #fafafa;
     border-color: #ccc;
+
+form.form
+  button
+    width 165px
+    margin-right 50px
+    padding-top 5px
+    padding-bottom 5px
+    font-size 14px
+
+  button, a.btn
+    margin-top 20px
