--- a/client/app/account/signup/signup.jade
+++ b/client/app/account/signup/signup.jade
@@ -1,8 +1,13 @@
 div(ng-include='"components/navbar/navbar.html"')
+
+header#banner.hero-unit
+  .container
+    h1 VotePlex
+    p.lead Create custom polls with live results.
+
+
 .container
   .row
-    .col-sm-12
-      h1 Sign up
     .col-sm-12
       form.form(name='form', ng-submit='register(form)', novalidate='')
         .form-group(ng-class='{ "has-success": form.name.$valid && submitted,\
@@ -32,18 +37,10 @@ div(ng-include='"components/navbar/navbar.html"')
           p.help-block(ng-show='form.password.$error.mongoose')
             | {{ errors.password }}
 
-        div
-          button.btn.btn-inverse.btn-lg.btn-login(type='submit')
+
+          button.btn.btn-lg.btn-success(type='submit')
             | Sign up
-          = ' '
-          a.btn.btn-default.btn-lg.btn-register(href='/login')
-            | Login
-
-
-        hr
-
-        div
+            
           a.btn.btn-twitter(href='', ng-click='loginOauth("twitter")')
             i.fa.fa-twitter
             |  Connect with Twitter
-  hr
