fixed navbar margin and hooked up the landing sign up page

--- a/client/app/main/signUp/signUp.jade
+++ b/client/app/main/signUp/signUp.jade
@@ -3,4 +3,5 @@ header#banner.hero-unit
     h1 VotePlex
     p.lead Create custom polls with live results.
     
-    button.btn.btn-success.btn-lg Sign Up
+    form(action="/signup")
+      button(type='submit').btn.btn-success.btn-lg Sign Up
