--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -44,6 +44,7 @@
 @import 'main/loggedIn/loggedIn.styl';
 @import 'main/main.styl';
 @import 'main/myPolls/myPolls.styl';
+@import 'main/myResults/myResults.styl';
 @import 'main/newPoll/newPoll.styl';
 @import 'main/newPollPosted/newPollPosted.styl';
 @import 'main/signUp/signUp.styl';
