--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -36,4 +36,6 @@ div(ng-controller='MainCtrl')
     new-poll-posted(ng-show="page==='newPollPosted'")
     
     my-polls(ng-show="page === 'myPolls'")
+    my-results(ng-show="page === 'results'")
+    
   vote-poll(ng-show="page === 'votePoll'")
