--- a/client/app/main/myPolls/myPolls.styl
+++ b/client/app/main/myPolls/myPolls.styl
@@ -1,8 +1,6 @@
 form
   li
     button
-      width 100px
-      position absolute
-      right 0
-      margin-right -120px
-      margin-top -8px
+      width 80px !important;
+      margin-top: -8px;
+      float: right;
